force-app/main/default/objects/RET_GREX_Integration_Settings__c/RET_GREX_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RET GREX Integration Settings</label>
</CustomObject>