force-app/main/default/objects/RET_GREX_Integration_Settings__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <inlineHelpText>The GREX endpoint URL that the Real Estate Tax application will connect to.</inlineHelpText>
    <label>Endpoint URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>