force-app/main/default/objects/RET_GREX_Integration_Settings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>