force-app/main/default/objects/RET_GREX_Integration_Settings__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>